test/sema/gc/immutable_pointee_value_assignment.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn main() {
  let n = gc(123);

  // CHECK: [[# @LINE + 1 ]]:6: error: pointee of type '*number' cannot be mutated
  *n = 456;
}
